--- a/simple/templates/simple_met.html
+++ b/simple/templates/simple_met.html
@@ -2,10 +2,10 @@
 {% load bootstrap4 %}
 <html>
 <head>
-	<title>Base Metabolic Rate Calculator</title>
+	<title>MET Calculator</title>
 </head>
 <body>
-	<h1>Enter the Following for BMR Calculator</h1>
+	<h1>Enter the Following for MET Calculator</h1>
 	<form action="." method="POST">
 		{% csrf_token %}
 		{% bootstrap_form form %}
