--- a/simple/templates/simple_bmr.html
+++ b/simple/templates/simple_bmr.html
@@ -3,10 +3,10 @@
 <html>
 <head>
 	<title>Base Metabolic Rate Calculator</title>
-
+{% load static %}
 <style type="text/css">
         body {
-          background: url({% static "images/bmr.jpg" %});
+          background-image: url({% static "images/bmr2.jpg" %});
           background-size: cover;
         }
 
@@ -16,14 +16,16 @@
             font-size: 10vw;
             letter-spacing: 20px;
             color: rgb(0, 255, 170);
-            padding-top: 20px;
+            padding-top: 200px;
             font-family: 'Cabin Sketch', cursive;
         }
 </style>
+
+<div class="splash"></div>
 </head>
 <body>
-	<h1>Enter the Following for BMR Calculator</h1>
-	<form action="." method="POST">
+	<h1 align="center">Enter the Following for BMR Calculator</h1>
+	<form action="." align="center" method="POST">
 		{% csrf_token %}
 		{% bootstrap_form form %}
 		
