--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -29,7 +29,30 @@ form {
 	font-weight: bold;
         color: brown;
         font-family: 'Lobster', cursive;
-	padding: 0.25px 400px 0.25px 400px;
+	padding: 0.5px 250px 0.5px 250px;
+}
+
+#customers {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 80%;
+}
+
+#customers td, #customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
 }
 
 
