new changes for cals

--- a/simple/templates/met_report.html
+++ b/simple/templates/met_report.html
@@ -61,7 +61,8 @@
 
 <body>
 <div id="report">
-	<p align="center">Total MET Today: {{ met }} METs</p>
+	<p align="center">Your BMR is: {{ bmr }} Calories/day</p>
+	<p align="center">Total MET Today: {{ met }} METs</p><p align="center">Total Calories burnt Today: {{ cals }} Calories</p>
 	<p align="center">Total MET this week: {{ weekmet }} METs, Left : {{ remmet }} METs</p>
 <p align="center">Following is recommendation for MET </p>
 <p align="center">Total MET per week (general): 600-1200, Total MET per week (individual) : 2500</p>
