--- a/simple/templates/met_report.html
+++ b/simple/templates/met_report.html
@@ -19,28 +19,26 @@
           background-image: url({% static "images/met2.jpg" %});
         }
 
-#customers {
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
 #customers td, #customers th{
   border: 1px solid #ddd;
   padding: 8px;
-}
-
-#customers tr:nth-child(even){background-color: #f2f2f2;}
-
-#customers tr:hover {background-color: #ddd;}
-
-#customers th {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: centre;
-  background-color: brown;
+  text-align: center;
+  background-color: orange;
   color: white;
 }
+
+#cust td, #cust th{
+  border: 1px solid #ddd;
+  padding: 8px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: blue;
+  color: white;
+}
+
 
 #report{
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
@@ -50,40 +48,88 @@
   padding: 8px;
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: left;
+  text-align: center;
   background-color: #4CAF50;
   color: white;
 }
+
+#heading{
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #ddd;
+  padding: 28px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: purple;
+  color: white;
+}
+
 </style>
 
 <div class="splash"></div>
 </head>
 
 <body>
-<div id="report">
+	<div id="heading">
+        <p><u>Report of MET and Calories for each activities</u></p>
+        </div>
+	<table id="cust" align="center" cellspacing="0">
+		<thead>
+		<tr>
+		<th>Activity</th>
+        	<th>Hours</th>
+        	<th>Minutes</th>
+        	<th>MET</th>
+		<th>CALS</th>
+		</tr>
+		</thead>
+		<tbody>
+			{% for i in indiv %}
+			<tr>
+				{% for j in i %}
+				<td><p align="center">{{j}}</p></td>
+				{% endfor %}
+			<tr>
+			{% endfor %}
+		</tbody>
+	</table>
+
+	<div id="heading">
+        <p><u>MET Calculation Reports</u></p>
+        </div>
+	
+	<div id="report">
+	<p align="center">Total MET Today: {{ met }} METs</p>
+        <p align="center">Total Calories burnt Today: {{ cals }} Calories</p>
+        <p align="center">Total MET this week: {{ weekmet }} METs, Left : {{ remmet }} METs</p>
 	<p align="center">Your BMR is: {{ bmr }} Calories/day</p>
-	<p align="center">Total MET Today: {{ met }} METs</p><p align="center">Total Calories burnt Today: {{ cals }} Calories</p>
-	<p align="center">Total MET this week: {{ weekmet }} METs, Left : {{ remmet }} METs</p>
-<p align="center">Following is recommendation for MET </p>
-<p align="center">Total MET per week (general): 600-1200, Total MET per week (individual) : 2500</p>
+	<p align="center">Total MET per week Recommendation (general): 600-1200</p>
+	<p align="center">Total MET per week Recommendation (individual) : 2500</p>
 	</div>
-<table id="customers" cellspacing="0">
+	
+	<div id = "heading">
+	<p><u>Table of recommendations of activities</u></p>
+	</div>
+	
+	<table id="customers" align="center" cellspacing="0">
 	<thead>
-    <tr>
+    	<tr>
         <th>Activity</th>
         <th>MET</th>
         <th>Calculation</th>
         <th>Total MET</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
+    	</tr>
+    	</thead>
+    	<tbody>
+    	<tr>
         <td>Running</td>
         <td>8 METS</td>
         <td>2 * 30 MINS = 60 MINS * 8 METS</td>
         <td>480 METS</td>
-   </tr>
-   <tr>
+   	</tr>
+   	<tr>
         <td>Brisk Walking</td>
         <td>6 METS</td>
         <td>14 * 15 mins = 210 mins * 6 METS</td>
@@ -117,7 +163,7 @@
         <td></td>
         <td></td>
         <td>Total</td>
-	<td><button value="3900">3900 METS</button></td>
+	<td>3900 METS</td>
    </tr>
     </tbody>
   </tr>
