--- a/simple/templates/met_report.html
+++ b/simple/templates/met_report.html
@@ -102,7 +102,7 @@
 	
 	<div id="report">
 	<p align="center">Total MET Today: {{ met }} METs</p>
-        <p align="center">Total Calories burnt Today: {{ cals }} Calories</p>
+        <p align="center">Total Calories burnt Today: {{ cals }} kcals</p>
         <p align="center">Total MET this week: {{ weekmet }} METs, Left : {{ remmet }} METs</p>
 	<p align="center">Your BMR is: {{ bmr }} Calories/day</p>
 	<p align="center">Total MET per week Recommendation (general): 600-1200</p>
